// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex Base Component Flex renders 1`] = `
.c0 {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
}

@media only screen and (min-width:40em) {
  .c0 {
    max-width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c0 {
    max-width: 61rem;
  }
}

@media only screen and (min-width:75em) {
  .c0 {
    max-width: 76rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Flex Base Component Flex renders with flexDirection prop 1`] = `
.c0 {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
}

@media only screen and (min-width:40em) {
  .c0 {
    max-width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c0 {
    max-width: 61rem;
  }
}

@media only screen and (min-width:75em) {
  .c0 {
    max-width: 76rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Flex Base Component Flex renders with legacy props 1`] = `
.c0 {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
}

@media only screen and (min-width:40em) {
  .c0 {
    max-width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c0 {
    max-width: 61rem;
  }
}

@media only screen and (min-width:75em) {
  .c0 {
    max-width: 76rem;
  }
}

<div
  className="c0"
  wrap={true}
/>
`;

exports[`Flex Base Component Flex renders with props 1`] = `
.c0 {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
}

@media only screen and (min-width:40em) {
  .c0 {
    max-width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c0 {
    max-width: 61rem;
  }
}

@media only screen and (min-width:75em) {
  .c0 {
    max-width: 76rem;
  }
}

<div
  className="c0"
/>
`;

exports[`Flex Base Component Flex renders with responsive props 1`] = `
.c0 {
  width: 100%;
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
}

@media only screen and (min-width:40em) {
  .c0 {
    max-width: 46rem;
  }
}

@media only screen and (min-width:64em) {
  .c0 {
    max-width: 61rem;
  }
}

@media only screen and (min-width:75em) {
  .c0 {
    max-width: 76rem;
  }
}

<div
  className="c0"
  wrap={
    Array [
      true,
      false,
    ]
  }
/>
`;
